fix audio covering

--- a/app.css
+++ b/app.css
@@ -42,3 +42,7 @@ img {
     transform: translateY(10%);
   }
 }
+
+audio {
+  position: absolute;
+}
